# image-proxy-metric

./: README.md  test_run.py
ptc_iou_tool/: README.md  ptc_iou_only.py  pyproject.toml
ptc_iou_tool/ptc_iou_tool/: __init__.py  cli.py  core.py
shared/: pyproject.toml
shared/det_shared/: config.py  detector.py
tta-locu-tool/: pyproject.toml
tta-locu-tool/tta_locu_tool/: __init__.py  cli.py  locu_core.py
tta_locu_tool/: README.md
tta_locu_tool/tta_locu_tool/: __init__.py  locu_core.py
